--- a/overlay/LmiSystemUI/res/values/config.xml
+++ b/overlay/LmiSystemUI/res/values/config.xml
@@ -25,4 +25,8 @@
     <!-- Define UDFPS vendor code for AOD -->
     <integer name="config_udfps_vendor_code">22</integer>
 
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">7</integer>
+    <integer name="config_maxVisibleNotificationIconsOnLock">8</integer>
+
 </resources>
