--- a/overlay/LmiFrameworks/res/values/dimens.xml
+++ b/overlay/LmiFrameworks/res/values/dimens.xml
@@ -33,6 +33,6 @@
     <dimen name="status_bar_height_portrait">@dimen/status_bar_height_default</dimen>
 
     <!-- Height of area above QQS where battery/time go (equal to status bar) -->
-    <dimen name="quick_qs_offset_height">40dp</dimen>
+    <dimen name="quick_qs_offset_height">@dimen/status_bar_height_portrait</dimen>
 
 </resources>
