--- a/overlay/LmiSystemUI/res/values/config.xml
+++ b/overlay/LmiSystemUI/res/values/config.xml
@@ -29,4 +29,7 @@
     <integer name="config_maxVisibleNotificationIcons">7</integer>
     <integer name="config_maxVisibleNotificationIconsOnLock">8</integer>
 
+    <!-- Max visible system icons -->
+    <integer name="config_maxVisibleStatusIconContainer">9</integer>
+
 </resources>
