--- a/overlay/LmiFrameworks/res/values/config.xml
+++ b/overlay/LmiFrameworks/res/values/config.xml
@@ -324,4 +324,7 @@
     <!-- Doze: should the TYPE_PICK_UP_GESTURE sensor be used as a pulse signal. -->
     <bool name="config_dozePulsePickup">true</bool>
 
+    <!-- Whether device supports double tap to wake -->
+    <bool name="config_supportDoubleTapWake">true</bool>
+
 </resources>
