lmi: enable double tap-to-wake
Signed-off-by: Omkar Chandorkar <gotenksIN@aosip.dev>

--- a/overlay/LmiFrameworks/res/values/config.xml
+++ b/overlay/LmiFrameworks/res/values/config.xml
@@ -321,4 +321,7 @@
         <item>9</item> <!-- COLOR_MODE_DISPLAY_P3 -->
     </integer-array>
 
+    <!-- Whether device supports double tap to wake -->
+    <bool name="config_supportDoubleTapWake">true</bool>
+
 </resources>
