--- a/overlay/LmiSystemUI/res/values/dimens.xml
+++ b/overlay/LmiSystemUI/res/values/dimens.xml
@@ -23,4 +23,7 @@
     default that should be overridden by device-specific overlays. -->
     <dimen name="physical_power_button_center_screen_location_y">980px</dimen>
 
+    <!-- Bottom margin size -->
+    <dimen name="keyguard_indication_margin_bottom">82dp</dimen>
+
 </resources>
