--- a/overlay/LmiFrameworks/res/values/dimens.xml
+++ b/overlay/LmiFrameworks/res/values/dimens.xml
@@ -25,7 +25,12 @@
     <!-- Height of the status bar.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
-    <dimen name="status_bar_height">35dp</dimen>
+    <dimen name="status_bar_height_default">35dp</dimen>
+
+    <!-- Height of the status bar in portrait.
+         Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
+         -->
+    <dimen name="status_bar_height_portrait">@dimen/status_bar_height_default</dimen>
 
     <!-- Height of area above QQS where battery/time go (equal to status bar) -->
     <dimen name="quick_qs_offset_height">40dp</dimen>
