--- a/overlay/LmiSystemUI/res/values/dimens.xml
+++ b/overlay/LmiSystemUI/res/values/dimens.xml
@@ -29,4 +29,7 @@
     <!-- With the large clock, move up slightly from the center -->
     <dimen name="keyguard_large_clock_top_margin">-152dp</dimen>
 
+    <!-- Margin on the left side of the carrier text on Keyguard -->
+    <dimen name="keyguard_carrier_text_margin">70px</dimen>
+
 </resources>
