--- a/overlay/LmiSystemUI/res/values/dimens.xml
+++ b/overlay/LmiSystemUI/res/values/dimens.xml
@@ -32,4 +32,7 @@
     <!-- Margin on the left side of the carrier text on Keyguard -->
     <dimen name="keyguard_carrier_text_margin">70px</dimen>
 
+    <!-- Height of the status bar header bar when on Keyguard (match status_bar_portrait) -->
+    <dimen name="status_bar_header_height_keyguard">@*android:dimen/status_bar_height_portrait</dimen>
+
 </resources>
