--- a/overlay/AOSPALmiFrameworks/res/values/config.xml
+++ b/overlay/AOSPALmiFrameworks/res/values/config.xml
@@ -41,4 +41,7 @@
     <!-- Type of the udfps long press sensor. Empty if long press is not supported. -->
     <string name="config_dozeUdfpsLongPressSensorType" translatable="false">co.aospa.sensor.udfps</string>
 
+    <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/battery/fastchg_status</string>
+
 </resources>
