--- a/overlay/LmiSystemUI/res/drawable/rounded_corner_top.xml
+++ b/overlay/LmiSystemUI/res/drawable/rounded_corner_top.xml
@@ -1,11 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-  android:height="218.0px" 
-  android:width="218.0px" 
-  android:viewportWidth="218.0" 
-  android:viewportHeight="218.0">
+<!--
+    Copyright (C) 2023 The Android Open Source Project
 
-    <path 
-      android:fillColor="#ff000000" 
-      android:pathData="M0,218C0,187.36 -0.13,148.14 1.23,119.51C1.64,110.9 2.2,102.32 3.16,93.76C3.99,86.31 5.11,78.95 6.9,71.65C8.66,64.49 11.01,57.69 14.35,51.09C18.34,43.19 23.47,36.1 29.74,29.84C36,23.58 43.09,18.46 50.99,14.47C57.6,11.14 64.4,8.79 71.56,7.04C78.86,5.25 86.22,4.13 93.68,3.3C102.25,2.34 110.83,1.78 119.44,1.37C148.1,0.01 187.34,0.15 218,0.15L0.07,0L0,218Z" />
+    You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="168px"
+        android:height="168px"
+        android:viewportWidth="168"
+        android:viewportHeight="168">
+    <path
+        android:fillColor="#000000"
+        android:pathData="M0,168C0,142.99 0.04,117.4 1.78,99.14C5.03,65 15.48,44.12 29.8,29.8C44.12,15.48 65,5.03 99.14,1.78C117.4,0.04 142.99,0 168,0H0V168Z" />
 </vector>
