--- a/overlay/LmiSystemUI/res/values/config.xml
+++ b/overlay/LmiSystemUI/res/values/config.xml
@@ -20,7 +20,7 @@
          Note that while rounded.xml includes the entire path (including the horizontal and vertical
          corner edges), this pulls out just the curve.
      -->
-    <string name="config_rounded_mask" translatable="false">M122,0 C71.76,3.59 52.03,8.07 29.6,29.6 8.07,52.03 3.59,71.76 0,122</string>
+    <string name="config_rounded_mask" translatable="false">M102,0C71.95,0 44.13,15.47 29.8,29.8C15.47,44.13 0,71.95 0,102</string>
     
     <!-- Define UDFPS vendor code for AOD -->
     <integer name="config_udfps_vendor_code">22</integer>
