--- a/overlay/LmiSystemUI/res/drawable/rounded_corner_bottom.xml
+++ b/overlay/LmiSystemUI/res/drawable/rounded_corner_bottom.xml
@@ -1,11 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-  android:height="237.0px" 
-  android:width="260.0px" 
-  android:viewportWidth="260.0" 
-  android:viewportHeight="237.0">
+<!--
+    Copyright (C) 2023 The Android Open Source Project
 
-    <path 
-      android:fillColor="#ff000000" 
-      android:pathData="M259.51,0C226.69,0 180.55,-0.1 147.73,0.89C137.84,1.19 127.96,1.6 118.09,2.3C109.36,2.92 100.68,3.76 92.02,5.14C73.26,8.13 56.11,13.49 40.55,25.27C32.5,31.36 25.5,38.72 19.83,47.06C14.93,54.25 11.23,61.78 8.47,70.03C5.73,78.23 4.15,86.55 3.09,95.11C1.86,105.12 1.33,115.14 0.96,125.21C-0.11,154.31 0,207.89 0,237L0,0L259.51,0Z" />
+    You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="218px"
+        android:height="218px"
+        android:viewportWidth="218"
+        android:viewportHeight="218">
+    <path
+        android:fillColor="#000000"
+        android:pathData="M0,218C0,138.12 0.04,117.4 1.78,99.14C5.03,65 15.48,44.13 29.8,29.8C44.13,15.48 65,5.03 99.14,1.78C117.4,0.04 138.12,0 218,0H0V218Z" />
 </vector>
