--- a/overlay/LmiSystemUI/res/values/config.xml
+++ b/overlay/LmiSystemUI/res/values/config.xml
@@ -32,4 +32,8 @@
     <!-- Max visible system icons -->
     <integer name="config_maxVisibleStatusIconContainer">9</integer>
 
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+     vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
+
 </resources>
