lmi: overlay: Update pixel pitch
Bug: 319894241
Flag: ACONFIG com.android.systemui.device_entry_udfps_refactor DEVELOPMENT
Test: manual

Change-Id: Iaa9576cb95ebe73043b7030b2b176f67bc90e3a1

--- a/overlay/LmiSystemUI/res/values/dimens.xml
+++ b/overlay/LmiSystemUI/res/values/dimens.xml
@@ -30,4 +30,8 @@
     <!-- With the large clock, move up slightly from the center -->
     <dimen name="keyguard_large_clock_top_margin">-152dp</dimen>
 
+    <!-- Microns/ums (1000 um = 1mm) per pixel for the given device. If unspecified, UI that
+         relies on this value will not be sized correctly. -->
+    <item name="pixel_pitch" format="float" type="dimen">64.37</item>
+
 </resources>
